--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>vcs-java-tools</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Simple Java learning tools</name>
+    <description>Some simple Java tools for quick operations like Math etc.</description>
+    <url>https://github.com/vcsdailiusrepo/vcs-java-tools</url>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -15,6 +19,21 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <developers>
+        <developer>
+            <name>Dailius Rascius</name>
+            <email>dailiusvcs@gmail.com</email>
+            <organization>lt.vcs.dailius</organization>
+            <organizationUrl>https://github.com/vcsdailiusrepo</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/vcsdailiusrepo/vcs-java-tools.git</connection>
+        <developerConnection>scm:git:ssh://github.com/vcsdailiusrepo/vcs-java-tools.git</developerConnection>
+        <url>https://github.com/vcsdailiusrepo/vcs-java-tools</url>
+    </scm>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
