--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>io.github.vcsdailiusrepo</groupId>
     <artifactId>vcs-java-tools</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
 
     <name>Simple Java learning tools</name>
     <description>Some simple Java tools for quick operations like Math etc.</description>
@@ -24,7 +24,7 @@
         <developer>
             <name>Dailius Rascius</name>
             <email>dailiusvcs@gmail.com</email>
-            <organization>lt.vcs.dailius</organization>
+            <organization>io.github.vcsdailiusrepo</organization>
             <organizationUrl>https://github.com/vcsdailiusrepo</organizationUrl>
         </developer>
     </developers>
@@ -57,7 +57,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <version>1.6.13</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -69,7 +69,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -82,7 +82,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -96,7 +96,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -107,6 +107,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
